@@ -1,3 +1,7 @@
+2020-08-02  Robby  <robby@periapsis.org>
+
+	* Updated Allocine data source.
+
 2020-05-31  Robby Stephenson  <robby@periapsis.org>
 
 	* Released Tellico 3.3.1.
